--- a/Junior/servlet/pom.xml
+++ b/Junior/servlet/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>spring-tx</artifactId>
             <version>4.2.5.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
 
